--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,114 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<meta charset="utf-8">
-<title>菜鸟教程(runoob.com)</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="/html/css/index.css">
 </head>
+
 <body>
-    <h1>我的第一个标题</h1>
-    <p>我的第一个段落。</p>
+  <div class="wrap">
+    <div class="w_left">
+      <div class="logo">
+        <div class="logoImg">
+          <img src="/html/image/logo.png" alt="">
+        </div>
+        <div class="logoName">
+          柏链道捷
+        </div>
+      </div>
+      <ul class="tabTitle">
+        <li class="active" id="eth">
+          eth
+        </li>
+        <li id="eos">
+          eos
+        </li>
+        <li id="fisco">
+          fisco
+        </li>
+      </ul>
+    </div>
+    <div class="w_right">
+      <ul class="tabCon">
+        <li class="active">
+          <div class="tabCon_box">
+            <div class="tabCon_r tabCon_r1"></div>
+            <div class="tabCon_line tabCon_line1"></div>
+            <div class="tabCon_r tabCon_r2"></div>
+            <div class="tabCon_line tabCon_line2"></div>
+            <div class="tabCon_r tabCon_r3"></div>
+            <div class="tabCon_line tabCon_line3"></div>
+            <div class="tabCon_r tabCon_r4"></div>
+            <div class="tabCon_line tabCon_line4"></div>
+          </div>
+          <div class="tabCon_status">
+            <div class="status_left">
+              单机版
+            </div>
+            <div class="status_right">
+              <div class="ready_run">
+                <div></div>已启动
+              </div>
+              <div class="no_run">
+                <div></div>未启动
+              </div>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="tabCon_box">
+            <div class="tabCon_r tabCon_single"></div>
+          </div>
+          <div class="tabCon_status">
+            <div class="status_left">
+              单机版
+            </div>
+            <div class="status_right">
+              <div class="ready_run">
+                <div></div>已启动
+              </div>
+              <div class="no_run">
+                <div></div>未启动
+              </div>
+            </div>
+          </div>
+        </li>
+        <li>
+            <div class="tabCon_box">
+                <div class="tabCon_r tabCon_r1"></div>
+                <div class="tabCon_line tabCon_line1"></div>
+                <div class="tabCon_r tabCon_r2"></div>
+                <div class="tabCon_line tabCon_line2"></div>
+                <div class="tabCon_r tabCon_r3"></div>
+                <div class="tabCon_line tabCon_line3"></div>
+                <div class="tabCon_r tabCon_r4"></div>
+                <div class="tabCon_line tabCon_line4"></div>
+              </div>
+              <div class="tabCon_status">
+                <div class="status_left">
+                  单机版
+                </div>
+                <div class="status_right">
+                  <div class="ready_run">
+                    <div></div>已启动
+                  </div>
+                  <div class="no_run">
+                    <div></div>未启动
+                  </div>
+                </div>
+              </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <script src="/html/js/jquery.min.js"></script>
+  <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+  <script src="/html/js/axios.js"></script>
+  <script src="/html/js/index.js"></script>
 </body>
+
 </html>
